# expert

./: .gitignore  CHANGELOG.md  Cargo.toml  rules.db
.github/workflows/: release.yml
.sqlx/: query-f08383f1855dadea1a79dd38141ebc9dc5f93a6e90cd6f47577769fd400aa9aa.json
src/: db.rs  main.rs  rule.rs
src/command/: db.rs  mod.rs  rule.rs
