[package]
name = "expert"
version = "0.1.0"
edition = "2021"
authors = ["fox_white25"]

[dependencies]
anyhow = "1.0.93"
rustyline = "15.0.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tabled = "0.17.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4.22"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8.5"
colored = "2.1.0"
